cabal-version:      2.4
name:               truelayer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Riley Evans
maintainer:         riley@rileyevans.co.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Bank.TrueLayer
      , Bank.TrueLayer.Auth
      , Bank.TrueLayer.Internal
      , Bank.TrueLayer.DataAPI.Accounts
      , Bank.TrueLayer.DataAPI.Cards
      , Bank.TrueLayer.DataAPI.Meta
      , Bank.TrueLayer.DataAPI.Schema

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
      OverloadedStrings

    build-depends:
        base >=4 && <5
      , hoauth2
      , uri-bytestring
      , aeson
      , wreq
      , lens
      , time
      , filepath
      , http-client
      , http-client-tls
      , text
    hs-source-dirs:   src
    default-language: Haskell2010
